# decomp2dbg

./: .gitignore  LICENSE  MANIFEST.in  README.md  d2d.py  decomp2dbg.py  decomp2gef.py  decomp2gef_ida.py  install.sh  setup.cfg  setup.py  test.sh
.github/workflows/: ghidra-build.yml  release.yml
assets/: decomp2dbg.cast  decomp2gef.cast
decomp2dbg/: __init__.py  __main__.py  installer.py
decomp2dbg/clients/: __init__.py  client.py
decomp2dbg/clients/gdb/: __init__.py  decompiler_pane.py  gdb_client.py  gdb_client_test.py  gef_client.py  pwndbg_client.py  symbol_mapper.py  utils.py
decomp2gef/: __init__.py  client.py  server_template.py  utils.py
decomp2gef/clients/: d2d_gdb.py
decomp2gef/clients/gdb/: decompiler_pane.py  gdb_client.py  gef_client.py  pwndbg_client.py  utils.py
decompilers/: server_template.py
decompilers/d2d_angr/: __init__.py  d2d_angr.py  plugin.toml  server.py
decompilers/d2d_binja/: __init__.py  d2d_binja.py  plugin.json  server.py
decompilers/d2d_ghidra/: README.md  build.gradle  extension.properties
decompilers/d2d_ida/: d2d_ida.py
decompilers/d2d_ida/d2d_ida/: plugin.py  server.py
decompilers/d2g_angr/: __init__.py  d2g_angr.py  server.py
decompilers/d2g_binja/: __init__.py  d2g_binja.py  plugin.json  server.py
decompilers/d2g_ida/: decomp2gef_ida.py
decompilers/d2g_ida/d2g_ida/: plugin.py  server.py
plugins/: decomp2gef_ida.py  server_template.py
plugins/d2g_angr/: d2g_angr.py  decomp2gef
testing/binaries/: objdump_ubuntu18  objdump_ubuntu20
(+5 files in other folders)
