[metadata]
name = decomp2dbg
version = attr: decomp2dbg.__version__
url = https://github.com/mahaloz/decomp2dbg
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Symbol syncing framework for decompilers and debuggers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    sortedcontainers
    pyelftools
    libbs>=0.12.0

python_requires = >= 3.5
include_package_data = True
packages = find:

[options.package_data]
decomp2dbg =
    d2d.py
    decompilers/*.py
    decompilers/d2d_angr/*.py
    decompilers/d2d_binja/*.py
    decompilers/d2d_binja/*.json
    decompilers/d2d_ida/*.py
    decompilers/d2d_ida/d2d_ida/*.py

[options.entry_points]
console_scripts =
    decomp2dbg = decomp2dbg.__main__:main
